# catkin_ori

./: .gitignore  CLAUDE.md  run.sh
src/path_search/: CMakeLists.txt
src/path_search/include/path_searching/: kino_astar.h  kino_model.hpp
src/path_search/src/: kino_astar.cpp
src/plan_manage/: CMakeLists.txt  package.xml
src/plan_manage/config/: global_config.yaml  planning.yaml  rlcontroller.yaml
src/plan_manage/include/plan_manage/: plan_manage.h  trajectory_metrics.h
src/plan_manage/include/se2Plan/: se2Polytraj.hpp  se2Trajopt.hpp
src/plan_manage/launch/: laser_obstacle.launch  plan_node.launch
src/plan_manage/models/: policy_1.pt
src/plan_manage/src/: controller.cpp  laser.cpp  plan_manage.cpp  plan_node.cpp  rlcontroller.cpp  test.cpp  trajectory_metrics.cpp  visualize_node.cpp
src/simulator/kinematics_simulator/params/: simulator.yaml
src/simulator/kinematics_simulator/src/: kinematics_sim.cpp
src/simulator/random_map_generator/launch/: car_sim_map.launch  test.launch
src/simulator/random_map_generator/launch/include/basic_rviz/: car.rviz  default.rviz
src/simulator/random_map_generator/maps/: basement98.pgm  basement98.yaml  map.yaml  map_parking.yaml  map_parking3.yaml  s_bend.yaml  test_playground.pgm  test_playground.yaml  zzz.yaml
src/simulator/random_map_generator/params/: map.yaml
src/simulator/random_map_generator/rviz/: default.rviz  my_ball.urdf
src/simulator/random_map_generator/scripts/: odom_tf_publisher.py
src/simulator/random_map_generator/src/: random_map_node.cpp
src/traj_optimizer/: CMakeLists.txt  package.xml
src/traj_optimizer/include/traj_optimizer/: common.hpp  poly_traj_utils.hpp  traj_optimizer.h
src/traj_optimizer/src/: traj_optimizer.cpp
src/utils/hunter_se/hunter_se_description/launch/: display.launch
src/utils/hunter_se/hunter_se_description/urdf/: hunter_se_description.urdf
src/utils/tools/include/tools/: CorridorBuilder2d.hpp  config.hpp  gridmap copy.hpp  gridmap.hpp  visualization.hpp
